Add an embedded web server; get frames to cooperate (http only)   * All the controls will work together instead of independently     for the case where the web pages are loaded from an http or https     server.  For a 'file' URL, this will not work with, for example,     firefox because of security constraints designed to prevent     cross-scripting attacks. That cannot be fixed - it is the way     browsers now work. It could work if the browers gave full     access to files in a subdirectory.